summative.moria.Moria.scala.error
Erreur de compilation :
Moria:14: error: not found: value x
} while(x != getMondeLargeur() - 4)
        ^Moria:15: error: not found: value y
setPos(getMondeLargeur() - 2, y + 1) 
                              ^