summative.moria.Moria.scala.code
do{
  var x:Int = getX()
  var y:Int = getY()
  if(!estSurBiscuit())
  	setPos(x + 1, y)
  else {
    prendBiscuit()
    setPos(x - 1, y)
    if(estSurBiscuit()) {
  		setPos(x + 1,y)
      poseBiscuit()
  	}
  }
} while(x != getMondeLargeur() - 4)
setPos(getMondeLargeur() - 2, y + 1)